Fix some paging styles in dark mode. (#211)
refs:
INFORCRM-30947

--- a/content/css/themes/crm/base.less
+++ b/content/css/themes/crm/base.less
@@ -80,7 +80,6 @@
 
 .list-has-more .list-more, .list-has-empty-opt .list-empty-opt {
     display: block;
-    background-color: #fff;
     text-align: center;
 }
 
